# m4

./: .gitignore  meson.build  meson_options.txt
.github/workflows/: main.yml
checks/: getenv.c  m4_test.py  m4_test_runner.py  meson.build
lib/: meson.build  sys_wait.in.h.meson
lib/sys/: meson.build
src/: meson.build
