option('enable_changeword', type: 'boolean', value: false, description: 'experimental feature which allows for changing the syntax of what is a "word" in m4')
option('with_syscmd_shell', type: 'string', value: '/bin/sh', description: '''By default, the 'syscmd' and 'esyscmd' macros try to use the first instance of 'sh' found by 'command -p getconf PATH' at configure time, with a default of '/bin/sh'.  If that default is inappropriate, you can set this option.''')
option('enable_tests', type: 'boolean', value: true, description: 'Enable m4 tests')
